# admet-mcp-lab

./: .gitignore  .mcp.json.example  INSTRUCTOR_GUIDE.md  README.md  STUDENT_HANDOUT.md  pyproject.toml
.claude/: settings.local.json
data/: seed_db.py
src/: _reference_solution.py  starter_server.py
tests/: test_smoke.py
