[project]
name = "admet-mcp-lab"
version = "0.1.0"
description = "AICD3 lab: build an ADMET MCP server and connect it to Claude"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.27.0",
    "rdkit>=2024.9.1",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
